MDEV-10052 Illegal mix of collations with DAYNAME(date_field)<>varchar_field