sql/sql_locale.h
@@ -61,6 +61,8 @@ public:
     grouping(grouping_par),
     errmsgs(errmsgs_par)
   {}
+  uint repertoire() const
+  { return is_ascii ? MY_REPERTOIRE_ASCII : MY_REPERTOIRE_EXTENDED; }
 };
 /* Exported variables */
 
